
cc_library(
	name = "typeof",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_config//:config"
	],
)
