load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "typeof",
    visibility = ["//visibility:public"],
    hdrs = glob(["include/**/*.hpp"]),
    includes = ["include"],
    deps = [
        "@boost//libs/preprocessor",
        "@boost//libs/type_traits",
        "@boost//libs/config",
    ],
)
